--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,7 @@
                     <driver>${database.driver}</driver>
                     <url>${database.url}</url>
                     <user>root</user>
-                    <password>root</password>
+                    <password>Marsql1$@</password>
                     <schemas>
                         <schema>${database.name}</schema>
                     </schemas>
@@ -58,7 +58,7 @@
                         <location>
                         	<!-- for Linux  filesystem:\src\main\java\resources\db -->
                         	<!-- for windows  filesystem:/src/main/java/resources/db -->
-                             filesystem:/src/main/java/resources/db
+                             filesystem:\src\main\java\resources\db
                         </location>
                     </locations>
                     <initOnMigrate>true</initOnMigrate>
