--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <database.name>pronosticDB</database.name>
   	<databese.driver>com.mysql.jdbc.Driver</databese.driver>
   	<!--   	<database.url>jdbc:mysql://localhost:3305</database.url>  -->
-  	<database.url>jdbc:mysql://localhost:3305</database.url>
+  	<database.url>jdbc:mysql://localhost</database.url>
   </properties>
 
    <dependencies>
