--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,9 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <database.name>pronosticDB</database.name>
   	<databese.driver>com.mysql.jdbc.Driver</databese.driver>
+  	<!-- <database.url>jdbc:mysql://192.168.56.10</database.url> -->
   	<!--   	<database.url>jdbc:mysql://localhost:3305</database.url>  -->
-  	<database.url>jdbc:mysql://localhost:3305</database.url>
+  	<database.url>jdbc:mysql://localhost</database.url>
   </properties>
 
    <dependencies>
@@ -50,7 +51,7 @@
                     <driver>${database.driver}</driver>
                     <url>${database.url}</url>
                     <user>root</user>
-                    <password>root</password>
+                    <password>Marsql1$@</password>
                     <schemas>
                         <schema>${database.name}</schema>
                     </schemas>
@@ -59,7 +60,7 @@
                         	<!-- for Linux  filesystem:\src\main\java\resources\db -->
                         	<!-- for windows  filesystem:/src/main/java/resources/db -->
 
-                             filesystem:/src/main/java/resources/db
+                             filesystem:\src\main\java\resources\db
 
                         </location>
                     </locations>
