--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,11 @@
 
    <dependencies>
    <!--  Start Test dependencies  -->
+   <dependency>
+    	<groupId>com.h2database</groupId>
+    	<artifactId>h2</artifactId>
+    	<version>1.4.192</version>
+	</dependency>
   	<dependency>
     	<groupId>org.mockito</groupId>
     	<artifactId>mockito-all</artifactId>
@@ -90,8 +95,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.3.2</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>1.7</source>
+                    <target>1.7</target>
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
