--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 		<databese.driver>com.mysql.jdbc.Driver</databese.driver>
 		<!-- <database.url>jdbc:mysql://192.168.56.10</database.url> -->
 		<!-- <database.url>jdbc:mysql://localhost:3305</database.url> -->
-		<database.url>jdbc:mysql://localhost:3306</database.url>
+		<database.url>jdbc:mysql://localhost:3305</database.url>
 
 		<lombok.version>1.16.2</lombok.version>
 	</properties>
@@ -93,7 +93,7 @@
 					<driver>${database.driver}</driver>
 					<url>${database.url}</url>
 					<user>root</user>
-					<password></password>
+					<password>root</password>
 					<schemas>
 						<schema>${database.name}</schema>
 					</schemas>
